crates/iscc-ffi/include/iscc.h

/**
 * Result of `gen_sum_code_v0` — composite Data+Instance ISCC-CODE with file metadata.
 *
 * On success, `ok` is `true` and all fields are populated.
 * On error, `ok` is `false`, string pointers are `NULL`, and `filesize` is 0.
 * Caller must free with `iscc_free_sum_code_result()`.
 */
typedef struct iscc_IsccSumCodeResult {
  /**
   * Whether the operation succeeded.
   */
  bool ok;
  /**
   * Composite ISCC-CODE string (heap-allocated, caller frees via `iscc_free_sum_code_result`).
   */
  char *iscc;
  /**
   * Hex-encoded BLAKE3 multihash of the file (heap-allocated).
   */
  char *datahash;
  /**
   * Byte length of the file.
   */
  uint64_t filesize;
  /**
   * NULL-terminated array of Data-Code and Instance-Code ISCC strings, or NULL.
   */
  char **units;
} iscc_IsccSumCodeResult;
/**
 * Result of decoding an ISCC unit string.
 *
 * On success, `ok` is `true` and all fields are populated.
 * On error, `ok` is `false` and all fields are zeroed (check `iscc_last_error()`).
 * Caller must free with `iscc_free_decode_result()`.
 */
typedef struct iscc_IsccDecodeResult {
  /**
   * Whether the decode succeeded.
   */
  bool ok;
  /**
   * MainType enum value (0–7).
   */
  uint8_t maintype;
  /**
   * SubType enum value (0–7).
   */
  uint8_t subtype;
  /**
   * Version enum value.
   */
  uint8_t version;
  /**
   * Length index from the header.
   */
  uint8_t length;
  /**
   * Raw digest bytes truncated to the encoded bit-length.
   */
  struct iscc_IsccByteBuffer digest;
} iscc_IsccDecodeResult;
/**
 * Clean and normalize text for display.
 *
 * Applies NFKC normalization, removes control characters (except newlines),
 * normalizes `\r\n` to `\n`, collapses consecutive empty lines, and strips
 * leading/trailing whitespace.
 *
 * # Returns
 *
 * Heap-allocated C string on success, `NULL` on error.
 * Caller must free with `iscc_free_string()`.
 *
 * # Safety
 *
 * `text` must point to a valid null-terminated UTF-8 string, or be null.
 */
 char *iscc_text_clean(const char *text);
/**
 * Remove newlines and collapse whitespace to single spaces.
 *
 * Converts multi-line text into a single normalized line.
 *
 * # Returns
 *
 * Heap-allocated C string on success, `NULL` on error.
 * Caller must free with `iscc_free_string()`.
 *
 * # Safety
 *
 * `text` must point to a valid null-terminated UTF-8 string, or be null.
 */
 char *iscc_text_remove_newlines(const char *text);
/**
 * Trim text so its UTF-8 encoded size does not exceed `nbytes`.
 *
 * Multi-byte characters that would be split are dropped entirely.
 * Leading/trailing whitespace is stripped from the result.
 *
 * # Returns
 *
 * Heap-allocated C string on success, `NULL` on error.
 * Caller must free with `iscc_free_string()`.
 *
 * # Safety
 *
 * `text` must point to a valid null-terminated UTF-8 string, or be null.
 */
 char *iscc_text_trim(const char *text, uintptr_t nbytes);
/**
 * Normalize and simplify text for similarity hashing.
 *
 * Applies NFD normalization, lowercasing, removes whitespace and characters
 * in Unicode categories C (control), M (mark), and P (punctuation), then
 * recombines with NFKC normalization.
 *
 * # Returns
 *
 * Heap-allocated C string on success, `NULL` on error.
 * Caller must free with `iscc_free_string()`.
 *
 * # Safety
 *
 * `text` must point to a valid null-terminated UTF-8 string, or be null.
 */
 char *iscc_text_collapse(const char *text);
/**
 * Encode bytes as base64url (RFC 4648 section 5, no padding).
 *
 * # Parameters
 *
 * - `data`: pointer to raw byte data
 * - `data_len`: number of bytes
 *
 * # Returns
 *
 * Heap-allocated C string on success, `NULL` on error.
 * Caller must free with `iscc_free_string()`.
 *
 * # Safety
 *
 * `data` must point to a valid buffer of at least `data_len` bytes.
 */
 char *iscc_encode_base64(const uint8_t *data, uintptr_t data_len);
/**
 * Convert a JSON string into a `data:` URL with JCS canonicalization.
 *
 * Uses `application/ld+json` media type when the JSON contains an `@context`
 * key, otherwise `application/json`.
 *
 * # Returns
 *
 * Heap-allocated C string on success, `NULL` on error.
 * Caller must free with `iscc_free_string()`.
 *
 * # Safety
 *
 * `json` must point to a valid null-terminated UTF-8 string, or be null.
 */
 char *iscc_json_to_data_url(const char *json);
/**
 * Encode raw ISCC header components and digest into a base32 ISCC unit string.
 *
 * Takes integer type identifiers and a raw digest, returns a base32-encoded
 * ISCC unit string (without "ISCC:" prefix).
 *
 * # Parameters
 *
 * - `mtype`: MainType enum value (0–7)
 * - `stype`: SubType enum value (0–7)
 * - `version`: Version enum value
 * - `bit_length`: bit length of the digest (multiple of 32)
 * - `digest`: pointer to raw digest bytes
 * - `digest_len`: number of bytes in the digest buffer
 *
 * # Returns
 *
 * Heap-allocated C string on success, `NULL` on error.
 * Caller must free with `iscc_free_string()`.
 *
 * # Safety
 *
 * If `digest_len > 0`, `digest` must point to a valid buffer of at least
 * `digest_len` bytes.
 */

char *iscc_encode_component(uint8_t mtype,
                            uint8_t stype,
                            uint8_t version,
                            uint32_t bit_length,
                            const uint8_t *digest,
                            uintptr_t digest_len);
/**
 * Generate a composite ISCC-CODE from a file path (Data-Code + Instance-Code).
 *
 * Single-pass file I/O feeds both DataHasher and InstanceHasher, then composes
 * the ISCC-CODE internally.
 *
 * # Parameters
 *
 * - `path`: null-terminated UTF-8 file path
 * - `bits`: hash bit length (typically 64)
 * - `wide`: if true, use 256-bit combination for ISCC-CODE
 * - `add_units`: if true, include individual Data-Code and Instance-Code strings
 *
 * # Returns
 *
 * `IsccSumCodeResult` struct. Check `ok` to determine success.
 * Caller must free with `iscc_free_sum_code_result()`.
 *
 * # Safety
 *
 * `path` must point to a valid null-terminated UTF-8 string, or be null.
 */

struct iscc_IsccSumCodeResult iscc_gen_sum_code_v0(const char *path,
                                                   uint32_t bits,
                                                   bool wide,
                                                   bool add_units);
/**
 * Free an `IsccSumCodeResult` previously returned by `iscc_gen_sum_code_v0`.
 *
 * Releases the `iscc`, `datahash` strings, and `units` array. No-op for NULL pointers.
 *
 * # Safety
 *
 * `result` must be a value returned by `iscc_gen_sum_code_v0`.
 * Each result must only be freed once.
 */
 void iscc_free_sum_code_result(struct iscc_IsccSumCodeResult result);
/**
 * Decode an ISCC unit string into header components and raw digest.
 *
 * Returns an `IsccDecodeResult` struct. Check `ok` to determine success.
 * Strips an optional "ISCC:" prefix before decoding.
 *
 * # Returns
 *
 * `IsccDecodeResult` with decoded fields. On error, `ok` is `false`.
 * Caller must free with `iscc_free_decode_result()`.
 *
 * # Safety
 *
 * `iscc` must point to a valid null-terminated UTF-8 string, or be null.
 */
 struct iscc_IsccDecodeResult iscc_decode(const char *iscc);
/**
 * Free an `IsccDecodeResult` previously returned by `iscc_decode`.
 *
 * Releases the digest buffer if non-null. No-op if digest is already null.
 *
 * # Safety
 *
 * `result` must be a value returned by `iscc_decode`.
 * Each result must only be freed once.
 */
 void iscc_free_decode_result(struct iscc_IsccDecodeResult result);
/**
 * Run all conformance tests against vendored test vectors.
 *
 * Returns `true` if all tests pass, `false` if any fail.
 */
 bool iscc_conformance_selftest(void);
/**
 * Decompose a composite ISCC-CODE into individual ISCC-UNITs.
 *
 * Accepts a normalized ISCC-CODE or concatenated ISCC-UNIT sequence.
 * The optional "ISCC:" prefix is stripped before decoding.
 * Returns a NULL-terminated array of heap-allocated C strings.
 *
 * # Returns
 *
 * NULL-terminated array on success, `NULL` on error (check `iscc_last_error()`).
 * Caller must free with `iscc_free_string_array()`.
 *
 * # Safety
 *
 * `iscc_code` must point to a valid null-terminated UTF-8 string, or be null.
 */
 char **iscc_decompose(const char *iscc_code);
/**
 * Generate sliding window n-grams from a string.
 *
 * Returns a NULL-terminated array of overlapping substrings of `width`
 * Unicode characters, advancing by one character at a time.
 *
 * # Returns
 *
 * NULL-terminated array on success, `NULL` on error (check `iscc_last_error()`).
 * Caller must free with `iscc_free_string_array()`.
 *
 * # Safety
 *
 * `seq` must point to a valid null-terminated UTF-8 string, or be null.
 */
 char **iscc_sliding_window(const char *seq, uint32_t width);
/**
 * Free a string previously returned by any `iscc_gen_*` function.
 *
 * # Safety
 *
 * `ptr` must be a pointer returned by one of the `iscc_gen_*_v0` functions,
 * or `NULL` (which is a no-op). Each pointer must only be freed once.
 */
 void iscc_free_string(char *ptr);
/**
 * Free a NULL-terminated string array returned by `iscc_decompose` or
 * `iscc_sliding_window`.
 *
 * Walks the array, freeing each string via `CString::from_raw`, then frees
 * the array itself. `NULL` is a no-op.
 *
 * # Safety
 *
 * `arr` must be a pointer returned by `iscc_decompose` or `iscc_sliding_window`,
 * or `NULL`. Each array must only be freed once.
 */
 void iscc_free_string_array(char **arr);
/**
 * Return the last error message from the current thread.
 *
 * Returns a pointer to a null-terminated string valid until the next
 * `iscc_gen_*` call on the same thread. Returns `NULL` if no error
 * has occurred.
 *
 * The returned pointer must NOT be freed by the caller.
 */
 const char *iscc_last_error(void);