packages/dotnet/Iscc.Lib/NativeMethods.g.cs


        /// <summary>
        ///  Clean and normalize text for display.
        ///
        ///  Applies NFKC normalization, removes control characters (except newlines),
        ///  normalizes `\r\n` to `\n`, collapses consecutive empty lines, and strips
        ///  leading/trailing whitespace.
        ///
        ///  # Returns
        ///
        ///  Heap-allocated C string on success, `NULL` on error.
        ///  Caller must free with `iscc_free_string()`.
        ///
        ///  # Safety
        ///
        ///  `text` must point to a valid null-terminated UTF-8 string, or be null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_text_clean", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* iscc_text_clean(byte* text);

        /// <summary>
        ///  Remove newlines and collapse whitespace to single spaces.
        ///
        ///  Converts multi-line text into a single normalized line.
        ///
        ///  # Returns
        ///
        ///  Heap-allocated C string on success, `NULL` on error.
        ///  Caller must free with `iscc_free_string()`.
        ///
        ///  # Safety
        ///
        ///  `text` must point to a valid null-terminated UTF-8 string, or be null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_text_remove_newlines", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* iscc_text_remove_newlines(byte* text);

        /// <summary>
        ///  Trim text so its UTF-8 encoded size does not exceed `nbytes`.
        ///
        ///  Multi-byte characters that would be split are dropped entirely.
        ///  Leading/trailing whitespace is stripped from the result.
        ///
        ///  # Returns
        ///
        ///  Heap-allocated C string on success, `NULL` on error.
        ///  Caller must free with `iscc_free_string()`.
        ///
        ///  # Safety
        ///
        ///  `text` must point to a valid null-terminated UTF-8 string, or be null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_text_trim", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* iscc_text_trim(byte* text, nuint nbytes);

        /// <summary>
        ///  Normalize and simplify text for similarity hashing.
        ///
        ///  Applies NFD normalization, lowercasing, removes whitespace and characters
        ///  in Unicode categories C (control), M (mark), and P (punctuation), then
        ///  recombines with NFKC normalization.
        ///
        ///  # Returns
        ///
        ///  Heap-allocated C string on success, `NULL` on error.
        ///  Caller must free with `iscc_free_string()`.
        ///
        ///  # Safety
        ///
        ///  `text` must point to a valid null-terminated UTF-8 string, or be null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_text_collapse", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* iscc_text_collapse(byte* text);

        /// <summary>
        ///  Encode bytes as base64url (RFC 4648 section 5, no padding).
        ///
        ///  # Parameters
        ///
        ///  - `data`: pointer to raw byte data
        ///  - `data_len`: number of bytes
        ///
        ///  # Returns
        ///
        ///  Heap-allocated C string on success, `NULL` on error.
        ///  Caller must free with `iscc_free_string()`.
        ///
        ///  # Safety
        ///
        ///  `data` must point to a valid buffer of at least `data_len` bytes.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_encode_base64", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* iscc_encode_base64(byte* data, nuint data_len);

        /// <summary>
        ///  Convert a JSON string into a `data:` URL with JCS canonicalization.
        ///
        ///  Uses `application/ld+json` media type when the JSON contains an `@context`
        ///  key, otherwise `application/json`.
        ///
        ///  # Returns
        ///
        ///  Heap-allocated C string on success, `NULL` on error.
        ///  Caller must free with `iscc_free_string()`.
        ///
        ///  # Safety
        ///
        ///  `json` must point to a valid null-terminated UTF-8 string, or be null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_json_to_data_url", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* iscc_json_to_data_url(byte* json);

        /// <summary>
        ///  Encode raw ISCC header components and digest into a base32 ISCC unit string.
        ///
        ///  Takes integer type identifiers and a raw digest, returns a base32-encoded
        ///  ISCC unit string (without "ISCC:" prefix).
        ///
        ///  # Parameters
        ///
        ///  - `mtype`: MainType enum value (0–7)
        ///  - `stype`: SubType enum value (0–7)
        ///  - `version`: Version enum value
        ///  - `bit_length`: bit length of the digest (multiple of 32)
        ///  - `digest`: pointer to raw digest bytes
        ///  - `digest_len`: number of bytes in the digest buffer
        ///
        ///  # Returns
        ///
        ///  Heap-allocated C string on success, `NULL` on error.
        ///  Caller must free with `iscc_free_string()`.
        ///
        ///  # Safety
        ///
        ///  If `digest_len &gt; 0`, `digest` must point to a valid buffer of at least
        ///  `digest_len` bytes.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_encode_component", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* iscc_encode_component(byte mtype, byte stype, byte version, uint bit_length, byte* digest, nuint digest_len);

        /// <summary>
        ///  Generate a composite ISCC-CODE from a file path (Data-Code + Instance-Code).
        ///
        ///  Single-pass file I/O feeds both DataHasher and InstanceHasher, then composes
        ///  the ISCC-CODE internally.
        ///
        ///  # Parameters
        ///
        ///  - `path`: null-terminated UTF-8 file path
        ///  - `bits`: hash bit length (typically 64)
        ///  - `wide`: if true, use 256-bit combination for ISCC-CODE
        ///  - `add_units`: if true, include individual Data-Code and Instance-Code strings
        ///
        ///  # Returns
        ///
        ///  `IsccSumCodeResult` struct. Check `ok` to determine success.
        ///  Caller must free with `iscc_free_sum_code_result()`.
        ///
        ///  # Safety
        ///
        ///  `path` must point to a valid null-terminated UTF-8 string, or be null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_gen_sum_code_v0", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern IsccSumCodeResult iscc_gen_sum_code_v0(byte* path, uint bits, [MarshalAs(UnmanagedType.U1)] bool wide, [MarshalAs(UnmanagedType.U1)] bool add_units);

        /// <summary>
        ///  Free an `IsccSumCodeResult` previously returned by `iscc_gen_sum_code_v0`.
        ///
        ///  Releases the `iscc`, `datahash` strings, and `units` array. No-op for NULL pointers.
        ///
        ///  # Safety
        ///
        ///  `result` must be a value returned by `iscc_gen_sum_code_v0`.
        ///  Each result must only be freed once.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_free_sum_code_result", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void iscc_free_sum_code_result(IsccSumCodeResult result);

        /// <summary>
        ///  Decode an ISCC unit string into header components and raw digest.
        ///
        ///  Returns an `IsccDecodeResult` struct. Check `ok` to determine success.
        ///  Strips an optional "ISCC:" prefix before decoding.
        ///
        ///  # Returns
        ///
        ///  `IsccDecodeResult` with decoded fields. On error, `ok` is `false`.
        ///  Caller must free with `iscc_free_decode_result()`.
        ///
        ///  # Safety
        ///
        ///  `iscc` must point to a valid null-terminated UTF-8 string, or be null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_decode", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern IsccDecodeResult iscc_decode(byte* iscc);

        /// <summary>
        ///  Free an `IsccDecodeResult` previously returned by `iscc_decode`.
        ///
        ///  Releases the digest buffer if non-null. No-op if digest is already null.
        ///
        ///  # Safety
        ///
        ///  `result` must be a value returned by `iscc_decode`.
        ///  Each result must only be freed once.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_free_decode_result", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void iscc_free_decode_result(IsccDecodeResult result);

        /// <summary>
        ///  Run all conformance tests against vendored test vectors.
        ///
        ///  Returns `true` if all tests pass, `false` if any fail.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_conformance_selftest", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool iscc_conformance_selftest();

        /// <summary>
        ///  Decompose a composite ISCC-CODE into individual ISCC-UNITs.
        ///
        ///  Accepts a normalized ISCC-CODE or concatenated ISCC-UNIT sequence.
        ///  The optional "ISCC:" prefix is stripped before decoding.
        ///  Returns a NULL-terminated array of heap-allocated C strings.
        ///
        ///  # Returns
        ///
        ///  NULL-terminated array on success, `NULL` on error (check `iscc_last_error()`).
        ///  Caller must free with `iscc_free_string_array()`.
        ///
        ///  # Safety
        ///
        ///  `iscc_code` must point to a valid null-terminated UTF-8 string, or be null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_decompose", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte** iscc_decompose(byte* iscc_code);

        /// <summary>
        ///  Generate sliding window n-grams from a string.
        ///
        ///  Returns a NULL-terminated array of overlapping substrings of `width`
        ///  Unicode characters, advancing by one character at a time.
        ///
        ///  # Returns
        ///
        ///  NULL-terminated array on success, `NULL` on error (check `iscc_last_error()`).
        ///  Caller must free with `iscc_free_string_array()`.
        ///
        ///  # Safety
        ///
        ///  `seq` must point to a valid null-terminated UTF-8 string, or be null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_sliding_window", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte** iscc_sliding_window(byte* seq, uint width);
